examples/fail/numop_mixed_size.hax
module ZZZ::NumOpMixedSize;

sub main() -> int32 {
  var int32 $a := 1;
  var int64 $b := 2;
  return $a + $b;
}
